fix the banner from white space on the sides after a certain width

--- a/src/components/Banner.sass
+++ b/src/components/Banner.sass
@@ -2,15 +2,13 @@
   display: inline-block
   align-items: center
   justify-content: center
-  position: absolute
+  position: relative
   top: 0
   left: 0
-  right: 0
+  
   .banner
     width: 100%
     height: auto
-    max-width: 100%
-    position: absolute
     top: 0
     object-fit: cover
   .banner-logo
@@ -18,3 +16,5 @@
     height: auto
     position: absolute
     bottom: 12%
+    left: 50%
+    margin-left: -25%
